@@ -24,9 +24,11 @@ import com.echothree.model.control.security.common.SecurityRoles;
 import com.echothree.model.control.selector.server.control.SelectorControl;
 import com.echothree.model.control.selector.server.logic.SelectorKindLogic;
 import com.echothree.model.control.workflow.server.control.WorkflowControl;
+import com.echothree.model.data.filter.server.factory.FilterKindFactory;
 import com.echothree.model.data.selector.server.entity.SelectorKind;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
 import com.echothree.model.data.workflow.server.entity.Workflow;
+import com.echothree.model.data.workflow.server.factory.WorkflowFactory;
 import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
@@ -35,9 +37,7 @@ import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 
 public class GetWorkflowsCommand
@@ -47,16 +47,16 @@ public class GetWorkflowsCommand
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
-                    new SecurityRoleDefinition(SecurityRoleGroups.Workflow.name(), SecurityRoles.List.name())
-                    )))
-                )));
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
+                        new SecurityRoleDefinition(SecurityRoleGroups.Workflow.name(), SecurityRoles.List.name())
+                ))
+        ));
 
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
                 new FieldDefinition("SelectorKindName", FieldType.ENTITY_NAME, false, null, null)
-                ));
+        );
     }
     
     /** Creates a new instance of GetWorkflowsCommand */
@@ -64,7 +64,7 @@ public class GetWorkflowsCommand
         super(userVisitPK, form, COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, true);
     }
 
-    SelectorKind selectorKind = null;
+    SelectorKind selectorKind;
 
     @Override
     protected Collection<Workflow> getEntities() {
@@ -97,6 +97,12 @@ public class GetWorkflowsCommand
                 var selectorControl = Session.getModelController(SelectorControl.class);
 
                 result.setSelectorKind(selectorControl.getSelectorKindTransfer(userVisit, selectorKind));
+            }
+
+            if(session.hasLimit(WorkflowFactory.class)) {
+                result.setWorkflowCount(selectorKind == null ?
+                        workflowControl.countWorkflows() :
+                        workflowControl.countWorkflowsBySelectorKind(selectorKind));
             }
 
             result.setWorkflows(workflowControl.getWorkflowTransfers(userVisit, entities));
